Implemented edit update functionality

--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a new Portfolio Item</h1>
+<h1>Edit this Portfolio Item</h1>
 
 <%= form_with(model: @portfolio_item, local: true) do |form| %>
 
