--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,6 @@
    <%= login_helper %>
     <%= yield %>
 
-    <% if session[:source] %>
-      <p>Thnaks for visiting me from <%= session[:source] %></p>  
-    <% end %>
+    <%= source_helper("application") %>
   </body>
 </html>
