--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Date</th>
       <th>Body</th>
       <th colspan="3"></th>
     </tr>
@@ -13,7 +14,6 @@
 
   <tbody>
     <%= render @blogs %>
-   
   </tbody>
 </table>
 
