--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Me</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae repellendus perspiciatis laboriosam nam reiciendis excepturi soluta consequuntur, dignissimos temporibus eligendi quia, at ducimus amet officiis eveniet. Praesentium quae recusandae at!</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque consequatur nostrum consequuntur error consectetur! Vero autem veritatis ratione. Facere, reiciendis fugiat maiores enim perspiciatis quod.</p>
