--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,23 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "5551116666" %></p>
-<p><%= number_to_currency "12333"%></p>
-<p><%= number_with_delimiter "19023589034021321312" %></p>
+<h1>Would you like to work together?</h1>
+
+<hr>
+
+<div class="row">
+    <div class="col-md-6">
+        <h3>Offic Address</h3>
+        <p>7150 E Camelback Rd, Suite 444, Scottsdale, AZ 85251</p>
+
+        <h3>Phone</h3>
+        <p><%= number_to_phone "4521415141" %></p>
+
+        <h3>Email</h3>
+        <p><a href="mailto:example@email.com?subject=PortfolioContact" "email me">Email me</a> </p>
+    </div>
+
+    <div class="col-md-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.94518462301!2d-111.92886698528207!3d33.50280325393186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b0bbd35df8635%3A0xf873d55c2d4dc69a!2s7150+E+Camelback+Rd+%23444%2C+Scottsdale%2C+AZ+85251%2C+USA!5e0!3m2!1sen!2sph!4v1532602732230"
+        width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+
+    
+</div>
