--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,3 +160,14 @@ body {
     width: 55rem;
   }
 }
+
+
+/* Custom Style */
+.card-block {
+  color: black;
+  text-align: left;
+}
+
+.auto-links a {
+  color: black;
+}
