Implemented nav bar for blog layout

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,19 +15,8 @@
   </head>
 
   <body>
-    <!-- Start of nav -->
-    <div class="blog-masthead">
-      <div class="container">
-        <nav class="nav blog-nav">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">New features</a>
-          <a class="nav-link" href="#">Press</a>
-          <a class="nav-link" href="#">New hires</a>
-          <a class="nav-link" href="#">About</a>
-        </nav>
-      </div>
-    </div>
-    <!-- End of nav -->
+  
+    <%= render 'shared/blog_nav' %>
 
     <!-- Start of blog header -->
     <div class="blog-header">
@@ -42,6 +31,8 @@
     <div class="container">
       <!-- row -->
       <div class="row">
+
+        <%= yield %>
 
       <div class="col-sm-8 blog-main">
 
@@ -78,9 +69,7 @@
 
         </div><!-- /.blog-main -->
 
-        <%= login_helper %>
-
-        <%= yield %>
+       
 
         <!-- start of sidebar -->
         <div class="col-sm-3 offset-sm-1 blog-sidebar">
