--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,10 +1,26 @@
-<%= image_tag @portfolio_item.main_image %>
-<h1><%= @portfolio_item.title %></h1>
-<em><%= @portfolio_item.subtitle %></em>
-<p><%= @portfolio_item.body %></p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-7">
+            <%= image_tag @portfolio_item.main_image %>
+        </div>
 
-<h2>Technologies Used:</h2>
+         <div class="col-md-5">
+            <h1><%= @portfolio_item.title %></h1>
 
-<% @portfolio_item.technologies.each do |t| %>
-<p><%= t.name %></p>
-<% end %>
+            <hr>
+
+            <em><%= @portfolio_item.subtitle %></em>
+            
+            <p><%= @portfolio_item.body %></p>
+
+            <h3>Technologies Used:</h3>
+
+            <% @portfolio_item.technologies.each do |t| %>
+            <p><%= t.name %></p>
+            <% end %>
+
+        </div>
+    </div>
+</div>
+
+
