--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,30 +1,40 @@
 <%= form_with(model: @portfolio_item, local: true) do |form| %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :title %>
+        <%= form.text_field :title, class: "form-control" %>
+      </div>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+      <div class="form-group">
+        <%= form.label :subtitle %>
+        <%= form.text_field :subtitle, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :body %>
+        <%= form.text_area :body, class: "form-control", rows: 13 %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :subtitle %>
-    <%= form.text_area :subtitle %>
+  
+  <hr>
+  <div class="col-md-12">
+    <h2>Technologies Used:</h2>
+    <div>
+      <%= form.fields_for :technologies do |technology_form| %>
+      <div class="form-group">
+        <%= technology_form.label :name %>
+        <%= technology_form.text_field :name, class: "form-control" %>
+      </div>
+      <% end %>
+    </div>
   </div>
+  
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-
-  <ul>
-    <%= form.fields_for :technologies do |technology_form| %>
-    <li>
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-    </li>
-    <% end %>
-  </ul>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <%= form.submit "Save Portfolio Item", class: "btn btn-primary btn-block" %>
   </div>
 <% end %>
