Updated images for about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,14 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae repellendus perspiciatis laboriosam nam reiciendis excepturi soluta consequuntur, dignissimos temporibus eligendi quia, at ducimus amet officiis eveniet. Praesentium quae recusandae at!</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque consequatur nostrum consequuntur error consectetur! Vero autem veritatis ratione. Facere, reiciendis fugiat maiores enim perspiciatis quod.</p>
+
+<hr>
+
+<div class="row">
+    <div class="col-md-4">
+        <%= image_tag "profile_img", width: 300, alt: "profile image "%>
+    </div>
+
+    <div class="col-md-8">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae repellendus perspiciatis laboriosam nam reiciendis excepturi soluta consequuntur, dignissimos temporibus eligendi quia, at ducimus amet officiis eveniet. Praesentium quae recusandae at!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque consequatur nostrum consequuntur error consectetur! Vero autem veritatis ratione. Facere, reiciendis fugiat maiores enim perspiciatis quod.</p>
+    </div>
+</div>
