Integrated image background for app layout

--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="mastfoot">
     <div class="inner">
-        <%= copyright_generator %>
+        <a href="#" class="app-footer"> <%= copyright_generator %></a>
     </div>
 </div>
