Refactored alerts into help method

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: blog, local: true) do |form| %>
   <% if blog.errors.any? %>
     <% blog.errors.full_messages.each do |errors| %>
-       <%= js add_gritter(errors, title: "John Paolo Portfolio", sticky: false) %>
+       <%= alert_generator errors  %>
     <% end %>
   <% end %>
 
