--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @portfolio_item, local: true) do |form| %>
   <% if @portfolio_item.errors.any? %>
     <% @portfolio_item.errors.full_messages.each do |errors| %>
-       <%= js add_gritter(errors, title: "John Paolo Portfolio", sticky: false) %>
+       <%= alert_generator errors  %>
     <% end %>
   <% end %>
   <div class="row">
